--- a/petstagram/templates/404.html
+++ b/petstagram/templates/404.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +8,7 @@
 <main>
     <!-- 404 page -->
     <div class="not-found-img">
-        <img src="/staticfiles/images/zillow-404-page-5f3ed6a6abaa5.gif" alt="404 not found gif">
+        <img src="{% static 'images/zillow-404-page-5f3ed6a6abaa5.gif' %}" alt="404 not found gif">
     </div>
 
     <div class="not-found">
