--- a/petstagram/templates/photos/photo-details-page.html
+++ b/petstagram/templates/photos/photo-details-page.html
@@ -32,26 +32,29 @@
                             <!-- Link to User Profile Details Page -->
                             <a href="#">
                                 <!-- IF user has first name and last name -->
-                                Diyan Kalaydzhiev
+                                Teodor Petkov
                                 <!-- else -->
                                 <!-- show user username -->
                             </a>
                             <br>
 
                             <!-- IF the photo has location -->
-                            <span>Bansko, Bulgaria</span>
+                            {% if photo.location %}
+                                <span>{{ photo.location }}</span>
+                            {% endif %}
 
                             <!-- IF the viewer is the creator of the photo -->
                             <div class="edit-delete-btns">
 
                                 <!-- Link to Edit Pet Photo Page -->
-                                <a href="#">
+                                <a href="{% url 'photo edit' photo.pk %}">
                                     <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}"
                                          alt="edit button">
                                 </a>
 
                                 <!-- Link to Delete Pet Photo Page -->
-                                <a href="#">
+                                <a href="{% url 'photo delete' photo.pk %}">
+{#                                <a href="#">#}
                                     <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                                 </a>
                             </div>
@@ -66,7 +69,7 @@
                 <!-- Start Pet Photo -->
                 <div class="imgBx" id="place the id of the photo here">
                     <!-- Pet Photo -->
-                    <img src="{% static 'images/axolotl.jpeg'%}" alt="post" class="cover">
+                    <img src="{{ photo.photo.url }}" alt="post" class="cover">
                 </div>
                 <!-- End Pet Photo -->
 
@@ -80,9 +83,10 @@
                             <span class="heart">
 
                                     <!-- Link to Like Path -->
-									<a href="#">
+									<a href="{% url 'like' photo.id %}">
 
 										<!-- IF user has liked the photo -->
+                                        {% if likes %}
                                         <svg style="color: red"
                                              xmlns="http://www.w3.org/2000/svg"
                                              width="24"
@@ -98,6 +102,8 @@
                                             </path>
                                         </svg>
 
+                                        {% else %}
+
                                         <!-- IF NOT user has liked the photo -->
                                         <svg aria-label="Like"
                                              color="#262626"
@@ -106,6 +112,9 @@
                                              role="img"
                                              viewBox="0 0 48 48"
                                              width="24">
+
+                                        {% endif %}
+
                                         <!-- Coordinate path -->
                                         <path d="M34.6 6.1c5.7 0 10.4 5.2 10.4
                                                     11.5 0 6.8-5.9 11-11.5 16S25 41.3 24
@@ -128,7 +137,7 @@
                             <!-- Start Share  Button -->
 
                             <!-- Link to Share Path -->
-                            <a href="#">
+                            <a href="{% url 'share' photo.id %}">
                                 <svg aria-label="Share Post" class="_8-yf5 " color="#262626" fill="#262626"
                                      height="24" role="img" viewBox="0 0 48 48" width="24">
                                     <path d="M47.8 3.8c-.3-.5-.8-.8-1.3-.8h-45C.9 3.1.3
@@ -145,30 +154,27 @@
                     <!-- End Like and Share Buttons Section -->
 
                     <!-- Number of Likes for the Photo -->
-                    <p class="likes">203 likes</p>
+                    <p class="likes">{{ likes.count }} likes</p>
 
                     <!-- Start Tagged Pets Section-->
+                {% for pet in photo.tagged_pets.all %}
                     <!-- Link to First Tagged Pet Details Page -->
-                    <a href="#">
+                    <a href="{% url 'pet details' "username" pet.slug %}">
                         <p class="message">
-                            <b>Sasho</b>
-                        </p>
-                    </a>
-                    <!-- Link to Second Tagged Pet Details Page -->
-                    <a href="#">
-                        <p class="message">
-                            <b>Some other fish</b>
+                            <b> {{ pet.name }} </b>
                         </p>
                     </a>
                     <!-- End Tagged Pets Section-->
+                {% endfor %}
 
                     <!-- Photo description -->
-                    <p class="pet-details">This is my pet</p>
+                    <p class="pet-details">{{ photo.description }}</p>
 
                     <!-- Date of Publication or edit of the Photo -->
-                    <h5 class="postTime">19/09/2022</h5>
+                    <h5 class="postTime">{{ photo.date_of_publication }}</h5>
 
                     <!-- Start Comments Section -->
+                {% for comment in comments %}
                     <div class="comments">
                         <div class="top">
                             <div class="userDetails">
@@ -184,17 +190,20 @@
                                     <p>
                                         <!-- Link to User Profile Details Page-->
                                         <!-- User First and/or Last Name or username-->
-                                        <a href="">Steven Ivanov</a>
+                                        <a href="">
+                                            <b>Teo</b>
+                                        </a>
                                         <!-- User Comment -->
-                                        - OMG where can i get one
+                                        {{ comment.text }}
                                     </p>
                                 </div>
-                                <span>Sept. 20, 2022, 5:02 p.m.</span>
+                                <span>{{ comment.date_time_of_publication }}</span>
                             </div>
                         </div>
                     </div>
                     <!-- End Comments Section -->
                 </div>
+                {% endfor %}
 
                 <!-- Start Add Comments Section -->
                 <div class="addComments">
@@ -205,10 +214,9 @@
                     </div>
 
                     <!-- Start Add Comments Form -->
-                    <form method="post" action="#">
-                        <label for="id_body">Body:</label>
-                        <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
-                                  required="" id="id_body"></textarea>
+                    <form method="post" action="{% url 'comment' photo.id %}">
+                            {% csrf_token %}
+                            {{ comments_form }}
                         <!-- Post Comments Button -->
                         <button type="submit">Post</button>
                     </form>
